detroy added and path to articls

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,4 @@
 <h1> Home Page</h1>
 
-<table>
-  <tr>
-    Jeff
-  </tr>
-  <tr>Item 2</tr>
+<%= link_to "Alhpa Blog", articles_path %> | <%= link_to 'About', about_path %>
 
-</table>
-
-<%= link_to 'About', about_path %>
