--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,8 @@
   </head>
 
   <body>
+<%= render 'layouts/messages' %>
 
-    <% flash.each do |name, msg| %>
-      <ul>
-      <li><%= msg %></li>
-      </ul>
-    <% end %>
 
     <%= yield %>
   </body>
